--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "koa-router": "^8.0.8",
     "koa-static": "^5.0.0",
     "koa2-cors": "^2.0.6",
-    "mongoose": "^5.9.16"
+    "mongoose": "^5.9.16",
+    "nodemailer": "^6.4.8"
   }
 }
